platform thread removed